# telegram-bot-api-ergo

./: LICENSE  cabal.project
telegram-bot-api-ergo-shim/: CHANGELOG.md  LICENSE  telegram-bot-api-ergo.cabal
telegram-bot-api-ergo-shim/src/Telegram/Bot/API/Ergo/: GettingUpdates.hs  HasErgoRep.hs  HasOldRep.hs  MakingRequests.hs
telegram-bot-ergo-types/: CHANGELOG.md  telegram-bot-ergo-types.cabal
telegram-bot-ergo-types/src-optics/Telegram/Bot/API/Ergo/Types/: Optics.hs
telegram-bot-ergo-types/src/Telegram/Bot/API/Ergo/: Types.hs
telegram-bot-ergo-types/src/Telegram/Bot/API/Ergo/Types/: Int.hs  Update.hs
telegram-bot-ergo-types/src/Telegram/Bot/API/Ergo/Types/Internal/: Utils.hs
