cabal-version:   3.4
name:            telegram-bot-ergo-types
version:         0.1.0.0
synopsis:        Ergonomic types for Telegram bot API bindings.

-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Drew Fenwick
maintainer:      drew.e.fenwick+github@gmail.com

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

common dialect
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    OverloadedRecordDot
    NoStarIsType
    DuplicateRecordFields
    LambdaCase

library
  import:          dialect, warnings
  exposed-modules: 
    Telegram.Bot.API.Ergo.Types.Update 
    Telegram.Bot.API.Ergo.Types.Int 
    Telegram.Bot.API.Ergo.Types

  other-modules:
    Telegram.Bot.API.Ergo.Types.Internal.Utils
  -- other-extensions:
  build-depends:
    , aeson             ^>=2.2.1
    , base              >=4.18.1.0 && <5
    , telegram-bot-api  ^>=7.0
    , vector            ^>=0.13.1
    , template-haskell

  hs-source-dirs:  src

library optics
  import: dialect, warnings
  visibility: public
  exposed-modules:
    Telegram.Bot.API.Ergo.Types.Optics
  build-depends: 
    , base              >=4.18.1.0 && <5
    , telegram-bot-ergo-types
    , telegram-bot-api
    , optics
  hs-source-dirs: src-optics

test-suite telegram-bot-ergo-types-test
  import:         dialect, warnings

  -- other-modules:
  -- other-extensions:
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base                     ^>=4.18.1.0
    , telegram-bot-ergo-types
